--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,15 @@
     
     "C_Cpp.default.cStandard": "c11",
     "C_Cpp.default.intelliSenseMode": "gcc-x64",
+    "C_Cpp.default.systemIncludePath": [
+        "${workspaceFolder}/kernel/include",
+    ],
+    "files.associations": {
+        "base.h": "c",
+        "stdio.h": "c",
+        "preinit.h": "c",
+        "misc.h": "c",
+        "dbg.h": "c"
+    },
 }
 
