--- a/TestExec/.vscode/launch.json
+++ b/TestExec/.vscode/launch.json
@@ -1,4 +1,40 @@
+/*
 {
+    // LLDB configurations
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "(gdb) Launch",
+            "type": "lldb",
+            "request": "custom",
+//            "program": "${workspaceFolder}/Filesystem/EFI/BOOT/BOOTx64.efi",
+            "targetCreateCommands": [
+//                "target create ${workspaceFolder}/Filesystem/EFI/BOOT/BOOTx64.efi",
+                "target create ${workspaceFolder}/Filesystem/EFI/BOOT/Core.sys",
+                "target modules load --file ${workspaceFolder}/Filesystem/EFI/BOOT/Core.sys -s 0",
+            ],
+            "processCreateCommands": [
+                "gdb-remote 127.0.0.1:7000"
+            ],
+            "initCommands": [
+//                "settings set target.inherit-env false",
+                "settings set target.x86-disassembly-flavor intel",
+                "settings set target.use-hex-immediates true",
+                "settings set target.hex-immediate-style asm",
+            ],
+            "relativePathBase": "${workspaceFolder}/../Pseudo/Kernel/Core",
+            "preLaunchTask": "Start Virtual Machine",
+        },
+    ]
+}
+*/
+
+
+{
+    // CPPDBG configurations
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
@@ -9,7 +45,8 @@
             "type": "cppdbg",
             "request": "launch",
 //            "program": "${workspaceFolder}/Filesystem/EFI/BOOT/BOOTx64.efi",
-            "program": "${workspaceFolder}/Filesystem/EFI/BOOT/Core.sys",
+//            "program": "${workspaceFolder}/Filesystem/EFI/BOOT/Core.sys",
+            "program": "${command:cmake.launchTargetPath}",//"${workspaceFolder}/Filesystem/EFI/BOOT/Core.sys",
             "args": [
                 "--nx", "--nh"
             ],
@@ -38,9 +75,9 @@
                     "description": "Set disassembly syntax to intel-style",
                     "text": "set disassembly-flavor intel",
                 },
-                {
-                    "text": "display/i $pc",
-                },
+//                {
+//                    "text": "display x/7i $pc-16",
+//                },
                 {
                     "text": "hb UefiMain",
                 },
