--- a/Source/Kernel/.vscode/settings.json
+++ b/Source/Kernel/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "C_Cpp.default.systemIncludePath": [
-        "${workspaceFolder}/core/**",
+        "${workspaceFolder}/core",
     ],
     "cmake.configureSettings": {
         "CMAKE_C_COMPILER": "gcc",
     },
+    "C_Cpp.errorSquiggles": "Disabled",
 }
