KERNEL: Memory pre-init working in progress

--- a/Source/Kernel/.vscode/settings.json
+++ b/Source/Kernel/.vscode/settings.json
@@ -1,9 +1,8 @@
 {
     "C_Cpp.default.systemIncludePath": [
-        "${workspaceFolder}/core",
+        "${workspaceFolder}/core/**",
     ],
     "cmake.configureSettings": {
         "CMAKE_C_COMPILER": "gcc",
     },
-    "C_Cpp.errorSquiggles": "Disabled",
 }
