KERNEL: Working on ACPI tables to get LAPIC/IOAPIC information

--- a/Source/Kernel/.vscode/settings.json
+++ b/Source/Kernel/.vscode/settings.json
@@ -5,4 +5,7 @@
     "cmake.configureSettings": {
         "CMAKE_C_COMPILER": "gcc",
     },
+    "cmake.preferredGenerators": [
+        "MinGW Makefiles",
+    ],
 }
