--- a/Source/OsLoader/.vscode/settings.json
+++ b/Source/OsLoader/.vscode/settings.json
@@ -5,4 +5,7 @@
     "cmake.configureSettings": {
         "CMAKE_C_COMPILER": "gcc",
     },
+    "cmake.preferredGenerators": [
+        "MinGW Makefiles",
+    ],
 }
