--- a/TestExec/.vscode/settings.json
+++ b/TestExec/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
-    "cmake.buildBeforeRun": true
+    "cmake.buildBeforeRun": true,
+    "cmake.preferredGenerators": [
+        "MinGW Makefiles",
+    ],
 }
