--- a/Source/Kernel/CMakeLists.txt
+++ b/Source/Kernel/CMakeLists.txt
@@ -14,6 +14,7 @@ set(TARGET_EXTENSION .sys)      # Output file extension
 
 # Kernel macro definitions.
 set(EMULATOR_BUILD 0)   # 0 or 1. 0 for real hardware, 1 for emulator.
+set(DEBUG_TRACE 0)      # 0 or 1. 0 for nothing, 1 for enable trace.
 
 # Kernel image base.
 set(KERNEL_IMAGE_BASE 0xffff8f0000000000)
@@ -114,7 +115,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ${TARGET_EXTENSION})
 # Compile options.
 target_compile_options(
     ${PROJECT_NAME} BEFORE
-    PRIVATE -O3 -mno-red-zone -save-temps -DKERNEL_BUILD_TARGET_EMULATOR=${EMULATOR_BUILD} -Wall -masm=intel -fstack-check=no -nostdinc -nodefaultlibs -nostdlib -ffreestanding -lgcc -lmsvcrt -g -pedantic -std=c11)
+    PRIVATE -O3 -mno-red-zone -save-temps -DDEBUG_TRACE=${DEBUG_TRACE} -DKERNEL_BUILD_TARGET_EMULATOR=${EMULATOR_BUILD} -Wall -masm=intel -fstack-check=no -nostdinc -nodefaultlibs -nostdlib -ffreestanding -lgcc -lmsvcrt -g -pedantic -std=c11)
 #    PRIVATE -O0 -save-temps -Wall -masm=intel -fstack-check=no -nostdinc -nodefaultlibs -nostdlib -ffreestanding -lgcc -lmsvcrt -g -pedantic -std=c11)
 
 # Link options.
