[PROTOTYPE] SCHED: Implemented context switch simulation

--- a/Prototype/Scheduler/Scheduler.vcxproj.filters
+++ b/Prototype/Scheduler/Scheduler.vcxproj.filters
@@ -22,4 +22,27 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="console.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="wall_clock.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="task.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="spinlock.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="scheduler.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="task_pool.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="vcpu.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
