--- a/Prototype/Scheduler/Scheduler.vcxproj
+++ b/Prototype/Scheduler/Scheduler.vcxproj
@@ -53,6 +53,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -145,7 +146,17 @@
     <ClCompile Include="list.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="console.hpp" />
+    <ClInclude Include="scheduler.hpp" />
+    <ClInclude Include="spinlock.hpp" />
+    <ClInclude Include="task.hpp" />
+    <ClInclude Include="task_pool.hpp" />
+    <ClInclude Include="vcpu.hpp" />
+    <ClInclude Include="wall_clock.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
   </ImportGroup>
 </Project>
