--- a/Prototype/Scheduler/Scheduler.vcxproj.filters
+++ b/Prototype/Scheduler/Scheduler.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="sched_base.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="wait.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.hpp">
