[PROTOTYPE] SCHED: implementing object wait

--- a/Prototype/Scheduler/Scheduler.vcxproj.filters
+++ b/Prototype/Scheduler/Scheduler.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="wait.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bintree.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.hpp">
